[gd_scene load_steps=5 format=2]

[ext_resource path="res://Movers/Base/mover.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
resource_local_to_scene = true

[sub_resource type="SphereShape" id=2]
resource_local_to_scene = true
radius = 20.0

[sub_resource type="SphereShape" id=3]
resource_local_to_scene = true
radius = 4.0

[node name="mover" type="RigidBody"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
linear_damp = 1.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Radar" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Radar"]
shape = SubResource( 2 )

[node name="InteractionReach" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="InteractionReach"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Radar" to="." method="_on_Radar_area_entered"]
[connection signal="area_entered" from="InteractionReach" to="." method="_on_InteractionReach_area_entered"]
